[gd_scene load_steps=23 format=2]

[ext_resource path="res://levels/titlescreen/titlescreen.gd" type="Script" id=1]
[ext_resource path="res://sprites/end_screen.png" type="Texture" id=2]
[ext_resource path="res://m5x7.tres" type="DynamicFont" id=3]
[ext_resource path="res://music/titlescreen.ogg" type="AudioStream" id=4]
[ext_resource path="res://sprites/dababy.png" type="Texture" id=5]
[ext_resource path="res://fx/mainmenu.wav" type="AudioStream" id=6]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=7]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/start_screen.png-769b7568853feeeea71294181472d1e6.stex"

[sub_resource type="AtlasTexture" id=2]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 385, 480 )

[sub_resource type="AtlasTexture" id=3]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 385, 0, 385, 480 )

[sub_resource type="AtlasTexture" id=4]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 770, 0, 385, 480 )

[sub_resource type="AtlasTexture" id=5]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 1155, 0, 385, 480 )

[sub_resource type="AtlasTexture" id=6]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 1540, 0, 385, 480 )

[sub_resource type="AtlasTexture" id=7]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 0, 480, 385, 480 )

[sub_resource type="AtlasTexture" id=8]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 385, 480, 385, 480 )

[sub_resource type="AtlasTexture" id=9]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 770, 480, 385, 480 )

[sub_resource type="AtlasTexture" id=10]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 1155, 480, 385, 480 )

[sub_resource type="AtlasTexture" id=11]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 1540, 480, 385, 480 )

[sub_resource type="AtlasTexture" id=12]
flags = 18
atlas = ExtResource( 5 )
region = Rect2( 0, 960, 385, 480 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 7 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
end_texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.741
anchor_top = 0.823
anchor_right = 0.741
anchor_bottom = 0.823
margin_left = -265.784
margin_top = -105.8
margin_right = 265.216
margin_bottom = 106.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 177.0
margin_top = 21.0
margin_right = 353.0
margin_bottom = 191.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 176.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Start"
flat = true

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 176.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 3 )
text = "Exit"
flat = true

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 176.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"
flat = true

[node name="TitleScreen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="DaBaby" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.205
anchor_top = 0.747
anchor_right = 0.205
anchor_bottom = 0.747
margin_left = -108.92
margin_top = -109.2
margin_right = 58.08
margin_bottom = 115.8
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="DaBaby"]
position = Vector2( 97.5807, 111.723 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 13 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="DaBaby"]
margin_left = -32.0
margin_top = -7.0
margin_right = 32.0
margin_bottom = 7.0
text = "by @lil_ye"

[node name="Timer" type="Timer" parent="."]
wait_time = 600.0
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 14 )

[node name="FX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "AudioBus7"

[node name="PopupMenu" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -16.5
margin_right = 47.5
margin_bottom = 16.5
custom_fonts/font = SubResource( 15 )
items = [ "Easy Mode", null, 1, false, false, 0, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
