extends Control

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _on_Timer_timeout():
	$DaBaby.show()

func _on_Start_pressed():
	pass # Replace with function body.


func _on_Exit_pressed():
	pass # Replace with function body.
